--- a/dashboard.Rmd
+++ b/dashboard.Rmd
@@ -1,22 +1,23 @@
 ---
-title: "plotly"
+title: "Dashboard"
 output: 
-  html_document:
-    toc: true
-    toc_float: true
+  flexdashboard::flex_dashboard:
+    orientation: columns
+    vertical_layout: fill
 ---
 
-This page is about making some plotly examples.
-
-```{r}
+```{r setup, include=FALSE}
+library(flexdashboard)
 library(tidyverse)
 library(p8105.datasets)
 
 library(plotly)
-
 ```
 
-look at NYC data:
+Column {data-width=650}
+-----------------------------------------------------------------------
+
+### Chart A
 
 ```{r}
 data("nyc_airbnb")
@@ -31,42 +32,30 @@ nyc_airbnb =
     neighbourhood_group == "Manhattan",
     room_type == "Entire home/apt",
     price %in% 100:500)
-```
-
-## make a scatter plot
-
-```{r}
 nyc_airbnb %>%
   mutate(text_label = str_c("Price: $", price, "\nRating: ", rating)) %>% 
   plot_ly(
     x = ~lat, y = ~long, type = "scatter", mode = "markers",
     color = ~price, text = ~text_label, alpha = 0.5)
-
 ```
 
-## plotly boxplot
+Column {data-width=350}
+-----------------------------------------------------------------------
+
+### Chart B
+
 ```{r}
 nyc_airbnb %>% 
   mutate(neighbourhood = fct_reorder(neighbourhood, price)) %>% 
   plot_ly(y = ~price, color = ~neighbourhood, type = "box", colors = "viridis")
 ```
 
-## bar chart
+### Chart C
+
 ```{r}
 nyc_airbnb %>% 
   count(neighbourhood) %>% 
   mutate(neighbourhood = fct_reorder(neighbourhood, n)) %>% 
   plot_ly(x = ~neighbourhood, y = ~n, color = ~neighbourhood, type = "bar", colors = "viridis")
-```
-## ggplotly
-
-```{r}
-scatter_ggplot = 
-  nyc_airbnb %>%
-  ggplot(aes(x = lat, y = long, color = price)) +
-  geom_point(alpha = 0.25) +
-  coord_cartesian()
-
-ggplotly(scatter_ggplot)
 ```
 
